@@ -21,7 +21,9 @@ WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the
 WISH: kick out xpm.C, replace by pixbuf
 DUMB: support tex fonts
 
-TODO: fix crash because strwidth returning -1 in selection-popup
+TODO: fix crash because strwidth returning -1 in selection-popup in LC_ALL=C
+	- give proper diagnostic when RXVT_SOCKET is too long instead of
+          corrupting the stack (patch by exg).
 
 7.9  Mon Aug  7 18:16:07 CEST 2006
         - fix the crashing bug people encountered with 7.8 + urxvtd + perl
